2019-03-16  Gavin Smith  <gavinsmith0123@gmail.com>

	Start on supporting @subentry in parser and Info output.

	* tp/Texinfo/Common.pm (%line_commands): Add 'subentry'.
	* tp/Texinfo/ParserNonXS.pm
	(%in_full_text_commands): Include 'subentry' so that @subentry 
	can appear inside an index command.
	(%begin_line_commands): Allow @subentry to occur other than at 
	the beginning of a line.
	(_is_index_element): New.
	(_parse_texi): Use _is_index_element to check if we are in an 
	index command.
	(_parse_texi) <line commands>: Handle @subentry.  Check valid 
	nesting.  Keep track of how many @subentry's have been used.
	* tp/Texinfo/Convert/Plaintext.pm (_printindex_formatted): If 
	there are index subentries, add them to the end of the text of 
	the index entry, separated by commas.

	This represents index subentries as a line command at the end of 
	the index entry.  A second @subentry is nested inside the first.

2019-03-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/18itemize.t (table_in_itemize): New test.

2019-03-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Examples of special characters in PDF destinations.

	* doc/texinfo-tex-test.texi
	(Test of characters in node names for PDF): New test.

2019-03-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Only load lcircle10 if @cartouche is used.

	* doc/texinfo.tex (\cartouchefontdefs): New macro.  Put loading 
	lcircle10 font in here.
	(\cartouche): Use it.

	This is a similar approach to that used for @euro{}.

2019-03-11  Gavin Smith  <gavinsmith0123@gmail.com>

	Active backslash in \setupdatafile.

	* doc/texinfo.tex (\setupdatafile): Make backslash active rather 
	than other.  This means that a section title is printed 
	correctly with input like the following:

	   \input texinfo
	   @xrefautomaticsectiontitle on
	   
	   @node One
	   @chapter One
	   
	   One.  @xref{Two}.
	   
	   @node Two
	   @chapter Two \
	   
	   @bye
	
	Without this, the backslash typesets as quotation marks.  Delete 