@@ -1407,6 +1407,21 @@ sub xml_protect_text($$)
   return $text;
 }
 
+# Add any index sub-entries specified with @subentry, separated by commas.
+sub convert_index_subentries {
+  my ($self, $entry) = @_;
+
+  my $result = '';
+  my $tmp = $entry->{'command'};
+  while ($tmp->{'extra'} and $tmp->{'extra'}->{'subentry'}) {
+    $tmp = $tmp->{'extra'}->{'subentry'};
+    $result .= $self->_convert({'text' => ', '});
+    $result .= $self->_convert($tmp->{'args'}->[0]);
+  }
+  return $result;
+}
+
+
 # 'today' is not set here.
 our %default_xml_commands_formatting; 
 $default_xml_commands_formatting{'normal'} = {
