@@ -1,5 +1,14 @@
 2019-03-16  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	@subentry in HTML output.
+
+	* tp/Texinfo/Convert/Converter.pm (convert_index_subentries): New.
+	* tp/Texinfo/Convert/HTML.pm (_convert_printindex_command): Use it.
+	* tp/Texinfo/Convert/Plaintext.pm (_printindex_formatted): 
+	Inline code from convert_line and call convert_index_subentries.
+
+2019-03-16  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	Start on supporting @subentry in parser and Info output.
 
 	* tp/Texinfo/Common.pm (%line_commands): Add 'subentry'.
